Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,2 +1,9 @@
 [project]
 	state = active
+[access "refs/heads/*"]
+	owner = group Administrators
+	create = group Sunfire Maintainers
+	push = group Sunfire Maintainers
+	label-Code-Review = -2..+2 group Sunfire Maintainers
+	label-Verified = -1..+1 group Sunfire Maintainers
+	submit = group Sunfire Maintainers
