Driver and kernel update per Motorola's June 21st, 2012 update
Change-Id: I7a66af3eed351150905b61582e2e6ec013977c5a

--- a/modules_src/bcm_sdio_wrapper/Makefile
+++ b/modules_src/bcm_sdio_wrapper/Makefile
@@ -10,14 +10,14 @@ default:
 	$(MAKE) -C $(KERNELDIR) SUBDIRS=$(PWD) modules
 
 clean:
-        $(MAKE) -C $(KERNELDIR) SUBDIR=$(PWD) clean
+	$(MAKE) -C $(KERNELDIR) SUBDIR=$(PWD) clean
 
 modules:
-$(warning executing $(MAKE) -C $(KERNELDIR) SUBDIR=$(PWD) modules)
-        $(MAKE) -C $(KERNELDIR) SUBDIR=$(PWD) modules
+	$(MAKE) -C $(KERNELDIR) SUBDIR=$(PWD) modules
+#$(warning executing $(MAKE) -C $(KERNELDIR) SUBDIR=$(PWD) modules)
 
 modules_install:
-        $(MAKE) -C $(KERNELDIR) SUBDIR=$(PWD) modules_install
+	$(MAKE) -C $(KERNELDIR) SUBDIR=$(PWD) modules_install
 
 clean:
 	rm -rf *.o *.ko
